@@ -42,12 +42,16 @@ public class DownloadUpdate {
     public DownloadUpdate(String DownloadPath, String webSide) {
         this.webSide = webSide;
         f = new File(DownloadPath);
-        if (!(f.exists() && f.isDirectory())) setDefaultDownloadPath();
+        if (f.exists() || f.isDirectory()) setDefaultDownloadPath();
     }
 
     public DownloadUpdate(String webSide) {
         this.webSide = webSide;
         setDefaultDownloadPath();
+    }
+
+    public void setWebSide(String webSide) {
+        this.webSide = webSide;
     }
 
     public void setDefaultDownloadPath() {
@@ -77,18 +81,23 @@ public class DownloadUpdate {
         File path = new File(downloadFile.getSaveDir());
         String lastLine = null;
         lastLine = ReverseSearch.get(path.getPath(), "DDD");
-        if (lastLine == null)
+        logger.info("Version Configuration file is downloaded");
+        if (lastLine == null) {
+            logger.error("You can't query the latest version from the version profile");
             return false;
+        }
         lastLine = lastLine.substring(3);
         Formation formation = new Formation(lastLine);
         List<String> list = formation.getArray();
         String version = list.getFirst();
         NewVersionID = Long.parseLong(version.substring(0, version.indexOf("/")));
         NewVersionName = version.substring(version.indexOf("/") + 1);
-        //判断猫叔文件是否存在，如果存在就在下载列表中删除
+        logger.info("The latest version in the version configuration file:{}({})", NewVersionName, NewVersionID);
+        //判断描述文件是否存在，如果存在就在下载列表中删除
         Pattern pattern = Pattern.compile("\\*DESCRIBE\\*\\{(.*?)\\}");
         Matcher matcher = pattern.matcher(lastLine);
         if (matcher.find()) {
+            logger.info("Describe Version File was found");
             DescribeFileWebSide = matcher.group(1);
             //描述文件不下载
             list.remove(DescribeFileWebSide);
@@ -97,9 +106,10 @@ public class DownloadUpdate {
             path.delete();
             return false;
         }
-        list.remove(0);
+        list.removeFirst();
         downloadFileWebSide = list;
         path.delete();
+        logger.info("Discover a new version");
         return true;
     }
 
@@ -133,21 +143,17 @@ public class DownloadUpdate {
     private int download(String down, Map<String, List> finalA, boolean isTry) {
         try {
             if (StopToUpdate) {
-                throw new UpdateException("User terminated software update");
+                throw new UpdateException("Update ended,cause of User terminated software update");
             }
-            if (!isTry)
-                CurrentDownloadingFile = new DownloadFile(down, f.getPath());
+            if (!isTry) CurrentDownloadingFile = new DownloadFile(down, f.getPath());
             logger.info("Downloading " + down);
-            if (!EnableSecureConnection)
-                logger.warn("The connection is not secure from {}!", down);
-            if (isTry)
-                CurrentDownloadingFile.retryToDownload();
-            else
-                CurrentDownloadingFile.startToDownload();
+            if (!EnableSecureConnection) logger.warn("The connection is not secure from {}!", down);
+            if (isTry) CurrentDownloadingFile.retryToDownload();
+            else CurrentDownloadingFile.startToDownload();
             List list = new ArrayList();
             String cache = CurrentDownloadingFile.getSaveDir();
             if (StopToUpdate) {
-                throw new UpdateException("User terminated software update");
+                throw new UpdateException("Update ended,cause of User terminated software update");
             }
             if (cache != null) {
                 list.add(cache);
@@ -176,16 +182,7 @@ public class DownloadUpdate {
 
     private int ExceptionHandling(IOException e) {
         logger.error(e.getMessage());
-        int choice = JOptionPane.showOptionDialog(
-                null,
-                "在下载过程中出现了错误：\n" + e,
-                "下载失败",
-                JOptionPane.DEFAULT_OPTION,
-                JOptionPane.QUESTION_MESSAGE,
-                null,
-                options,
-                options
-        );
+        int choice = JOptionPane.showOptionDialog(null, "在下载过程中出现了错误：\n" + e, "下载失败", JOptionPane.DEFAULT_OPTION, JOptionPane.QUESTION_MESSAGE, null, options, options);
         return choice;
     }
 
@@ -197,6 +194,7 @@ public class DownloadUpdate {
 
     //下载描述文件List[0]:文件存放路径;[1]下载类[调用此方法时，推进使用新线程，否则窗体可能会无相应]
     public List downloadDescribe() {
+        logger.info("Start downloading describe version file...");
         StopToUpdate = false;
         if (!(DescribeFileWebSide == null) && !DescribeFileWebSide.isEmpty()) {
             return download(Collections.singletonList(DescribeFileWebSide)).get(DescribeFileWebSide);
@@ -207,6 +205,7 @@ public class DownloadUpdate {
     //终止更新
     public void stopToUpdate() {
         StopToUpdate = true;
+        CurrentDownloadingFile.stopToDownload();
     }
 
     public static boolean isEnableSecureConnection() {
@@ -217,22 +216,20 @@ public class DownloadUpdate {
         if (EnableSecureConnection == Enable) {
             if (!Enable) {
                 //创建一个自定义的TrustManager，它接受所有证书
-                TrustManager[] trustManagers = new TrustManager[]{
-                        new X509TrustManager() {
-                            @Override
-                            public void checkClientTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-                            }
+                TrustManager[] trustManagers = new TrustManager[]{new X509TrustManager() {
+                    @Override
+                    public void checkClientTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
+                    }
 
-                            @Override
-                            public void checkServerTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
-                            }
+                    @Override
+                    public void checkServerTrusted(X509Certificate[] x509Certificates, String s) throws CertificateException {
+                    }
 
-                            @Override
-                            public X509Certificate[] getAcceptedIssuers() {
-                                return new X509Certificate[]{};
-                            }
-                        }
-                };
+                    @Override
+                    public X509Certificate[] getAcceptedIssuers() {
+                        return new X509Certificate[]{};
+                    }
+                }};
                 try {
                     //初始化SSLConText
                     SSLContext sc = SSLContext.getInstance("TLS");
